# raytrace

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ArgumentsParser.h  BaseStructures.h  Figures.h  Scene.h
lib/EasyBMP/: CMakeLists.txt  Makefile  cmake_install.cmake
src/: ArgumentsParser.cpp  BaseStructures.cpp  Figures.cpp  Scene.cpp
